# arcadia

./: .gitignore  build_release.bat  build_release.sh  pyproject.toml  run_arcadia.bat  run_arcadia.sh  run_arcadia_server.bat  run_arcadia_server.sh  setup_env.bat  setup_env.sh  test_arcadia.bat
scripts/: db_manager.py  mock_game.py
skins/default/: skin.json
src/: app_state.py  data_manager.py  input_manager.py  main.py  models.py
src/arcadia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/components/: component.py  game_list.py  playlist_list.py
src/frontend/: app_state.py  main.py
src/frontend/components/: component.py  game_list.py  playlist_list.py
src/shared/: data_manager.py  models.py
src/web/: dependencies.py  schemas.py  server.py
src/web/routers/: games.py  platforms.py
themes/default/: theme.json
